fix: avoid API 34 Stream toList in font domains